# randomsecret

./: Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: publish-chart.yaml  publish-image.yaml  rust.yaml
examples/: example.yaml
helm/randomsecret/: Chart.yaml  values.yaml
helm/randomsecret/crds/: randomsecret.yaml
helm/randomsecret/templates/: _helpers.tpl  deployment.yaml  rbac.yaml  serviceaccount.yaml
src/: crd.rs  generate.rs  main.rs  reconcile.rs
