[package]
name = "randomsecret"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
anyhow = "1.0.103"
futures = "0.3.32"
k8s-openapi = { version = "0.28.0", features = ["latest"] }
kube = { version = "4.0.0", features = ["runtime", "derive"] }
rand = "0.10.2"
schemars = "1.2.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serde_yaml = "0.9.34"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread", "signal"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
